--- a/apps/assembly-ui/i18n/en.json
+++ b/apps/assembly-ui/i18n/en.json
@@ -58,7 +58,8 @@
     "policy": "Privacy policy",
     "cookie": "Cookie policies",
     "legal": "Legal information",
-    "about": "About Make.org"
+    "about": "About Make.org",
+    "sources": "@@sidebar.sources|fr:Consulter les sources"
   },
   "error": {
     "not_found": "404",
@@ -126,5 +127,11 @@
     "theme_third": "Topic 3",
     "theme_fourth": "Topic 4",
     "warning": "Important detail"
+  },
+  "sources_page": {
+    "consult": "@@sources_page.consult|fr:Consulter les sources :",
+    "docs": "@@sources_page.docs|fr:Les sources documentaires :",
+    "see": "@@sources_page.see|fr:Voir l'évènement",
+    "videos": "@@sources_page.videos|fr:Les sources vidéos :"
   }
 }
