--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -1001,8 +1001,8 @@
         "deprecated_title": "Obtenir le rapport complet",
         "title": "Obtenez le rapport complet",
         "type": "Format : {{extension}} - Poids : {{weight}}",
-        "button": "Télécharger",
-        "contact": "Pour obtenir le rapport d’analyses complet de cette consultation, merci de bien vouloir nous contacter à l’adresse : ",
+        "button": "Télécharger le rapport complet",
+        "contact": "Pour obtenir le rapport d’analyses complet de cette consultation, cliquez sur le bouton ci-dessous.",
         "email_object": "Rapport analyse"
       },
       "top_ideas": {
