feat(front): add moldova

--- a/apps/front/i18n/bg.json
+++ b/apps/front/i18n/bg.json
@@ -1308,7 +1308,8 @@
     "SI": "Словения",
     "SK": "Словакия",
     "US": "САЩ",
-    "UA": "Украйна"
+    "UA": "Украйна",
+    "MD": "@@countries.MD|fr:Moldavie"
   },
   "languages": {
     "fr": "Français",
