--- a/apps/front/i18n/el.json
+++ b/apps/front/i18n/el.json
@@ -1411,7 +1411,8 @@
     "SI": "Σλοβενία",
     "SK": "Σλοβακία",
     "US": "ΗΠΑ",
-    "UA": "Ουκρανία"
+    "UA": "Ουκρανία",
+    "MD": "@@countries.MD|fr:Moldavie"
   },
   "languages": {
     "fr": "Français",
