--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1367,6 +1367,7 @@
     "LT": "Lithuania",
     "LU": "Luxembourg",
     "LV": "Latvia",
+    "MD": "Moldova",
     "MT": "Malta",
     "NL": "Netherlands",
     "NO": "Norway",
