--- a/apps/front/i18n/es.json
+++ b/apps/front/i18n/es.json
@@ -1335,7 +1335,8 @@
     "SI": "Eslovenia",
     "SK": "Eslovaquia",
     "US": "EE. UU.",
-    "UA": "Ucrania"
+    "UA": "Ucrania",
+    "MD": "@@countries.MD|fr:Moldavie"
   },
   "languages": {
     "fr": "Français",
