--- a/apps/front/i18n/fi.json
+++ b/apps/front/i18n/fi.json
@@ -1308,7 +1308,8 @@
     "SI": "Slovenia",
     "SK": "Slovakia",
     "US": "Yhdysvallat",
-    "UA": "Ukraina"
+    "UA": "Ukraina",
+    "MD": "@@countries.MD|fr:Moldavie"
   },
   "languages": {
     "fr": "Français",
