--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -1432,6 +1432,7 @@
     "LT": "Lituanie",
     "LU": "Luxembourg",
     "LV": "Lettonie",
+    "MD": "Moldavie",
     "MT": "Malte",
     "NL": "Pays-Bas",
     "NO": "Norvège",
