--- a/apps/front/i18n/it.json
+++ b/apps/front/i18n/it.json
@@ -1335,7 +1335,8 @@
     "SI": "Slovenia",
     "SK": "Slovacchia",
     "US": "USA",
-    "UA": "Ucraina"
+    "UA": "Ucraina",
+    "MD": "@@countries.MD|fr:Moldavie"
   },
   "languages": {
     "fr": "Français",
