--- a/apps/front/i18n/lt.json
+++ b/apps/front/i18n/lt.json
@@ -1438,7 +1438,8 @@
     "SI": "Slovėnija",
     "SK": "Slovakija",
     "US": "JAV",
-    "UA": "Ukraina"
+    "UA": "Ukraina",
+    "MD": "@@countries.MD|fr:Moldavie"
   },
   "languages": {
     "fr": "Français",
