--- a/apps/front/i18n/nl.json
+++ b/apps/front/i18n/nl.json
@@ -1308,7 +1308,8 @@
     "SI": "Slovenië",
     "SK": "Slowakije",
     "US": "VS",
-    "UA": "Oekraïne"
+    "UA": "Oekraïne",
+    "MD": "@@countries.MD|fr:Moldavie"
   },
   "languages": {
     "fr": "Français",
