--- a/apps/front/i18n/pt.json
+++ b/apps/front/i18n/pt.json
@@ -1438,7 +1438,8 @@
     "SI": "Eslovénia",
     "SK": "Eslováquia",
     "US": "EUA",
-    "UA": "Ucrânia"
+    "UA": "Ucrânia",
+    "MD": "@@countries.MD|fr:Moldavie"
   },
   "languages": {
     "fr": "Français",
