--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1451,17 +1451,17 @@
     "next": "Weiter"
   },
   "temp_viva": {
-    "break": "BREAKING NEWS @ VIVATECHNOLOGY 2024",
-    "title": "Make.org unveils",
-    "title_italic": " two global initiatives ",
-    "title_2": "to put A.I. in service of society",
-    "sub_1_italic": "Democratic Commons: ",
-    "sub_1": "Pioneering AI for Democracy",
-    "text_1": "Make.org is launching the first-ever global research program to integrate democratic principles into AI. With a team of 50 researchers and engineers, we're developing unbiased AI and platforms to enhance citizen participation. We are achieving it in collaboration with top international academics from institutions such as SciencesPo, CNRS, Sorbonne, Hugging Face, Aspen Institute, Mozzilla.ai, Genci and Project Liberty Institute.",
-    "button_1": "discover & join",
-    "sub_2_italic": "VivaTech AI Report: ",
-    "sub_2": "AI-Driven Conference Insights",
-    "text_2": "Make.org is launching the world’s premier platform VivaTech AI Report which leverages Artificial Intelligence to revolutionize access to VivaTech’s conferences content. Developed by Make.org with Les Echos, Viva Technology and Magic-Lemp, the platform offers VivaTech visitors entirely new paths to access the best of the conferences content. Thanks to Make.org AI technology, visitors are able to ask questions about what was discussed at the Vivatech’s conferences, get detailed answers and directly access video excerpts that explain the arguments.",
-    "button_2": "discover & test"
+    "break": "AKTUELLE NACHRICHTEN @ VIVATECHNOLOGY 2024",
+    "title": "Make.org stellt ",
+    "title_italic": "zwei globale Initiativen vor, ",
+    "title_2": "um Künstliche Intelligenz in den Dienst der Gesellschaft zu stellen",
+    "sub_1_italic": "Demokratisches Allgemeingut: ",
+    "sub_1": "Pionierarbeit für KI im Dienste der Demokratie",
+    "text_1": "Make.org startet das weltweit erste Forschungsprogramm zur Integration demokratischer Prinzipien in Künstlicher IntelligenzI. Mit einem Team von 50 Forschenden sowieIngenieurinnen und Ingenieuren entwickeln wir unvoreingenommene KI und Plattformen zur Verbesserung vonBürgerbeteiligung. Dasgeschieht in Zusammenarbeit mit internationalen Spitzenwissenschaftlern von Institutionen wie SciencesPo, CNRS, Sorbonne, Hugging Face, Aspen Institute, Mozzilla.ai, Genci und Project Liberty Institute.",
+    "button_1": "ENTDECKEN & mitmachen",
+    "sub_2_italic": "VivaTech AI Bericht: ",
+    "sub_2": "KI-gesteuerte Konferenz-Einblicke",
+    "text_2": "Make.org lanciert die weltweit erste Plattform VivaTech AI Report, die künstliche Intelligenz nutzt, um den Zugang zu den Inhalten der VivaTech-Konferenzen zu revolutionieren. Die von Make.org in Zusammenarbeit mit Les Echos, Viva Technology und Magic-Lemp entwickelte Plattform bietet VivaTech-Besucherinnen und -Besuchern völlig neue Wege, um auf die besten Inhalte der Konferenzen zuzugreifen. Dank der KI-Technologie von Make.org können die Besucher Fragen zu den Inhalten der VivaTech-Konferenzen stellen, detaillierte Antworten erhalten und direkt auf Videoausschnitte zugreifen, in denen die Argumente erläutert werden.",
+    "button_2": "ENTDECKEN & testen"
   }
 }
