--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -1479,16 +1479,16 @@
   },
   "temp_viva": {
     "break": "BREAKING NEWS @ VIVATECHNOLOGY 2024",
-    "title": "Make.org unveils",
-    "title_italic": " two global initiatives ",
-    "title_2": "to put A.I. in service of society",
-    "sub_1_italic": "Democratic Commons: ",
-    "sub_1": "Pioneering AI for Democracy",
-    "text_1": "Make.org is launching the first-ever global research program to integrate democratic principles into AI. With a team of 50 researchers and engineers, we're developing unbiased AI and platforms to enhance citizen participation. We are achieving it in collaboration with top international academics from institutions such as SciencesPo, CNRS, Sorbonne, Hugging Face, Aspen Institute, Mozzilla.ai, Genci and Project Liberty Institute.",
-    "button_1": "discover & join",
-    "sub_2_italic": "VivaTech AI Report: ",
-    "sub_2": "AI-Driven Conference Insights",
-    "text_2": "Make.org is launching the world’s premier platform VivaTech AI Report which leverages Artificial Intelligence to revolutionize access to VivaTech’s conferences content. Developed by Make.org with Les Echos, Viva Technology and Magic-Lemp, the platform offers VivaTech visitors entirely new paths to access the best of the conferences content. Thanks to Make.org AI technology, visitors are able to ask questions about what was discussed at the Vivatech’s conferences, get detailed answers and directly access video excerpts that explain the arguments.",
-    "button_2": "discover & test"
+    "title": "Make.org annonce ",
+    "title_italic": " deux initiatives mondiales ",
+    "title_2": "pour mettre l'IA au service de la société",
+    "sub_1_italic": "Les \"Communs Démocratiques\" : ",
+    "sub_1": "l'IA au service de la démocratie",
+    "text_1": "Make.org lance le premier programme mondial de recherche pour une IA éthique au service de la démocratie et qui intègre ses principes. Avec une équipe de 50 chercheurs et ingénieurs, nous développons des solutions et des plateformes utilisant des modèles d’IA débiaisés pour améliorer la participation citoyenne. Ce programme de recherche est mené en collaboration avec des universitaires et des institutions internationales de premier plan telles que Sciences Po, le CNRS, Sorbonne Université, Hugging Face, Aspen Institute, Mozilla.ai, le GENCI et le Project Liberty's Institute.",
+    "button_1": "EN SAVOIR PLUS",
+    "sub_2_italic": "VivaTech AI Report : ",
+    "sub_2": "une révolution dans l’accès aux conférences VivaTech",
+    "text_2": "Make.org lance une plateforme inédite qui utilise l’intelligence artificielle pour révolutionner l’accès au contenu des conférences de Viva Technology 2024. Développée par Make.org avec Les Echos, en partenariat avec Viva Technology et avec le soutien de Magic Lemp, la plateforme offre aux visiteurs de VivaTech de toutes nouvelles manières d'accéder au meilleur contenu des conférences. Grâce à la technologie IA de Make.org, les visiteurs peuvent poser des questions sur tout ce qui s’est dit lors des conférences de Vivatech, obtenir des réponses détaillées de l’IA, et même accéder directement aux extraits vidéos correspondants.",
+    "button_2": "DECOUVRIR"
   }
 }
