chore(front): update translations

--- a/apps/front/i18n/bg.json
+++ b/apps/front/i18n/bg.json
@@ -962,12 +962,9 @@
         "title": "Картографиране на дебата"
       },
       "download": {
-        "deprecated_title": "Получаване на пълния доклад",
         "title": "Получете пълния доклад",
-        "type": "Формат: {{extension}} - Тежест: {{weight}}",
-        "button": "Изтегляне",
-        "contact": "За да получите пълния доклад за анализа на тази консултация, моля, свържете се с нас на адрес: ",
-        "email_object": "Доклад за анализ"
+        "button": "Изтегляне на пълния доклад",
+        "contact": "За да получите пълния доклад за анализа на тази консултация, кликнете върху бутона по-долу."
       },
       "top_ideas": {
         "skiplink": "Най-важните нови идеи",
