--- a/apps/front/i18n/el.json
+++ b/apps/front/i18n/el.json
@@ -981,12 +981,9 @@
         "title": "Χαρτογράφηση της συζήτησης"
       },
       "download": {
-        "deprecated_title": "Λήψη ολόκληρης της έκθεσης",
-        "title": "Πραγματοποιήστε λήψη ολόκληρης της έκθεσης",
-        "type": "Μορφή: {{extension}} - Βάρος: {{weight}}",
-        "button": "Λήψη",
-        "contact": "Για να λάβετε ολόκληρη την έκθεση ανάλυσης της παρούσας διαβούλευσης, επικοινωνήστε μαζί μας στη διεύθυνση: ",
-        "email_object": "Έκθεση ανάλυσης"
+        "title": "Αποκτήστε την πλήρη έκθεση",
+        "button": "Κατεβάστε την πλήρη έκθεση",
+        "contact": "Για να λάβετε την πλήρη έκθεση ανάλυσης αυτής της διαβούλευσης, κάντε κλικ στο παρακάτω κουμπί"
       },
       "top_ideas": {
         "skiplink": "Οι κορυφαίες αναδυόμενες ιδέες",
