--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -993,12 +993,9 @@
         "title": "Картографування дискусій"
       },
       "download": {
-        "deprecated_title": "Отримати повний звіт",
-        "title": "Отримайте повний звіт",
-        "type": "Формат {{extension}} — Вага: {{weight}}",
-        "button": "Завантажити",
-        "contact": "Для отримання повного аналітичного звіту за результатами цієї публічної консультації зв’яжіться з нами за адресою: ",
-        "email_object": "Аналітичний звіт"
+        "title": "Отримати повний звіт",
+        "button": "Завантажити повний звіт",
+        "contact": "Щоб отримати повний звіт про аналіз цієї консультації, натисніть на кнопку нижче"
       },
       "top_ideas": {
         "skiplink": "Топ найкращих нових ідей",
